Updated the Readme file

--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
       <title>EXO BAND</title>
    </head>
-   <body>
+   <body class="music-body">
       <header>
          <!--Navigation bar section-->
          <nav class="navbar navbar-expand-md navbar-light bg-danger sticky-top navbar-section">
@@ -60,32 +60,32 @@
          <div class="row">
             <!--start of first column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/uxmP4b2a0uY"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/uxmP4b2a0uY"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of first column-->
             <!--start of second column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/I3dezFzsNss"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/I3dezFzsNss"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of second column-->
             <!--start of third column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/KSH-FVVtTf0"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/KSH-FVVtTf0"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of third column-->
             <!--start of fourth column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/yVLxRXoLaas"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/yVLxRXoLaas"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
@@ -98,24 +98,24 @@
          <div class="row">
             <!--start of first column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DisqruN2EAw"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/DisqruN2EAw"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of first column-->
             <!--start of second column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TUal746AO6c"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/TUal746AO6c"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of second column-->
             <!--start of third column-->
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
-               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kdqHigVv-Kk"
+               <div class="embed-responsive embed-responsive-16by9 text-center">
+                  <iframe class="embed-responsive-item" width="526" height="315" src="https://www.youtube.com/embed/kdqHigVv-Kk"
                      style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
