final modifications in all pages

--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,7 @@
       <!--end of Gallery Jumbotron heading section-->
       <!--picture gallery of exo-->
       <div class="container-fluid picture-gallery">
+         <h2 class="photo-heading"><i class="fa fa-camera"></i> Photos</h2>
          <div class="row">
             <!-- start of Modal 1 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
