--- a/music.html
+++ b/music.html
@@ -54,7 +54,7 @@
       <!--end of Gallery Jumbotron heading section-->
       <!--music listening section of exo-->
       <div class="container-fluid music-container">
-         <h2 class="music-heading"> Popular Songs</h2>
+         <h2 class="music-heading"><i class="fa fa-play-circle"></i>  Popular Songs</h2>
          <hr>
          <!--start of first row-->
          <div class="row">
@@ -92,7 +92,7 @@
             <!--end of fourth column-->		
          </div>
          <!--end of first row-->
-         <h2 class="music-heading"> Concert Videos</h2>
+         <h2 class="music-heading"><i class="fa fa-play-circle"></i>  Concert Videos</h2>
          <hr>
          <!--start of second row-->
          <div class="row">
@@ -123,6 +123,7 @@
          </div>
          <!--end of second row-->
       </div>
+      <hr>
       <!--end of music listening section of exo-->
       <!--start of video selling section-->
       <div class="container-fluid video-selling-container">
