--- a/tour.html
+++ b/tour.html
@@ -54,7 +54,7 @@
       <!--end of Gallery Jumbotron heading section-->
       <!--Tour Info of exo-->
       <div class="container-fluid tour-container">
-         <h2 class="heading tour-heading text-center">Tour Details</h2>
+         <h2 class="heading tour-heading text-center"><i class="fa fa-plane"></i> Tour Details</h2>
          <!--responsive table for tour details-->
          <div class="class-table-responsive">
             <!--start of tour table-->
@@ -70,26 +70,26 @@
                <tbody>
                   <tr>
                      <th scope="row">MAY 12, 2020</th>
-                     <td>FALLSVIEW CASINO </td>
-                     <td>NIAGARA FALLS, ON</td>
+                     <td>THE FORUM </td>
+                     <td>LOS ANGELES, CA</td>
                      <td><button class="btn btn-secondary disabled btn--tour">SOLD OUT</button></td>
                   </tr>
                   <tr>
-                     <th scope="row">MAY 12, 2020</th>
-                     <td>FALLSVIEW CASINO</td>
-                     <td>NIAGARA FALLS, ON</td>
+                     <th scope="row">JUNE 24, 2020</th>
+                     <td>KSPO DOME</td>
+                     <td>SEOUL, S. KOREA</td>
                      <td><button class="btn btn-secondary disabled btn--tour">SOLD OUT</button></td>
                   </tr>
                   <tr>
-                     <th scope="row">MAY 12, 2020</th>
-                     <td>FALLSVIEW CASINO </td>
-                     <td>NIAGARA FALLS, ON</td>
+                     <th scope="row">AUGUST 20, 2020</th>
+                     <td>COTAI ARENA </td>
+                     <td>MACAU, CHINA</td>
                      <td><button class="btn btn-secondary disabled btn--tour">BOOKING STARTS ON JUNE</button></td>
                   </tr>
                   <tr>
                      <th scope="row">MAY 12, 2020</th>
-                     <td>FALLSVIEW CASINO </td>
-                     <td>NIAGARA FALLS, ON</td>
+                     <td>THE FLOAT @ MARINA BAY </td>
+                     <td>SINGAPORE</td>
                      <td><button class="btn btn-secondary disabled btn--tour">BOOKING STARTS ON JUNE</button></td>
                   </tr>
                </tbody>
