--- a/gallery.html
+++ b/gallery.html
@@ -58,8 +58,8 @@
          <div class="row">
             <!-- start of Modal 1 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/newimg.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
                </a>
                <!-- start of Modal Body 1 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-one" aria-hidden="true">
@@ -71,7 +71,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
+                           <img class="image-width" src="assets/images/imgbig9.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
                         </div>
                      </div>
                   </div>
@@ -82,8 +82,8 @@
 
             <!-- start of Modal 2 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two"  alt="Image two">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two"  alt="Image two">
                </a>
                <!-- start of Modal Body 2 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-two" aria-hidden="true">
@@ -95,7 +95,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two" alt="Image two">
+                           <img class="image-width" src="assets/images/imgbig1.jpg" data-toggle="modal" data-target="#image-two" alt="Image two">
                         </div>
                      </div>
                   </div>
@@ -106,8 +106,8 @@
 
             <!-- start of Modal 3 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/imgnew18.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
                </a>
                <!-- start of Modal Body 3 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-three" aria-hidden="true">
@@ -119,7 +119,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
+                           <img class="image-width" src="assets/images/imgbig5.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
                         </div>
                      </div>
                   </div>
@@ -130,8 +130,8 @@
 
             <!--start of modal 4-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
                </a>
                <!-- start of Modal Body 4 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-four"
@@ -144,7 +144,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
+                           <img class="image-width" src="assets/images/imgbig3.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
                         </div>
                      </div>
                   </div>
@@ -155,8 +155,8 @@
 
             <!--start of modal 5-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/imgnew9.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
                </a>
                <!-- start of Modal Body 5 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-five"
@@ -169,7 +169,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
+                           <img class="image-width" src="assets/images/imgbig2.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
                         </div>
                      </div>
                   </div>
@@ -180,8 +180,8 @@
 
             <!--start of modal 6-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
+               <a class="d-block h-100 mb-3">
+               <img class="img-fluid hvr-grow-shadow" src="assets/images/imgnew10.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
                </a>
                <!-- start of Modal Body 6 !-->
                <div class="modal" tabindex="-1" role="dialog"
@@ -194,7 +194,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
+                           <img class="image-width" src="assets/images/imgbig4.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
                         </div>
                      </div>
                   </div>
@@ -205,8 +205,8 @@
 
             <!--start of modal 7-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
+               <a class="d-block h-100 mb-3">
+                <img class="img-fluid hvr-grow-shadow" src="assets/images/imgnew20.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
                </a>
                <!-- start of Modal Body 7!-->
                <div class="modal" tabindex="-1" role="dialog"
@@ -219,7 +219,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
+                           <img class="image-width" src="assets/images/imgbig7.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
                         </div>
                      </div>
                   </div>
@@ -231,8 +231,8 @@
             <!--start of modal 8-->
             <div
                class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-               <a class="d-block">
-                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
+               <a class="d-block h-100 mb-3">
+                <img class="img-fluid hvr-grow-shadow" src="assets/images/imgnew19.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
                </a>
                <!-- start of Modal Body 8 !-->
                <div class="modal" tabindex="-1"
@@ -247,7 +247,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
+                           <img class="image-width" src="assets/images/imgbig6.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
                         </div>
                      </div>
                   </div>
