Final modifications after html and css validations

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--end of Introduction section-->
 
       <!--about section-->
-      <div class="container-fluid about-container">
+      <div class="container-fluid about-container" id="About">
          <div class="row">
 
             <!--about picture section-->
@@ -76,7 +76,7 @@
 
             <!--about text section-->
             <div class="col-sm-4 col-md-6 col-lg-8">
-               <h1 class="about-title"><strong><a name="About"> About </a></strong></h1>
+               <h1 class="about-title"><strong>About </strong></h1>
                <hr class="about-underline">
                <p class="lead about-para">EXO is a South Korean – Chinese boy band created by Lee Soo Man,
                   founder of SM Entertainment, in 2011. Originally formed of 8 Korean members and 4 Chinese
