--- a/tour.html
+++ b/tour.html
@@ -202,18 +202,18 @@
                <div class="modal-body">
                   <form>
                      <div class="form-group">
-                        <label for="full Name">Full Name</label>
-                        <input type="text" class="form-control" id="firstName" required>
+                        <label for="fullName">Full Name</label>
+                        <input type="text" class="form-control" id="fullName" required>
                      </div>
                      
                      <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        <label for="exampleInputEmail2">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp1" required>
+                        <small id="emailHelp1" class="form-text text-muted">We'll never share your email with anyone else.</small>
                      </div>
                      <div class="form-group">
                         <label for="Details">Enquiry Details</label>
-                        <input type="textarea" class="form-control" id="Details" required>
+                        <textarea class="form-control" id="Details">   </textarea>
                      </div>
                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                      <button type="submit" class="btn btn-success">Submit</button>
