modfied finally the comments on each page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <!--about picture section-->
             <div class="col-md-6 col-lg-4 about-picture">
             </div>
-
+            <!--end of about picture section-->
+            
             <!--about text section-->
             <div class="col-sm-4 col-md-6 col-lg-8">
                <h1 class="about-title"><strong>About </strong></h1>
@@ -104,6 +105,7 @@
                <!--end of about Modal button section-->
 
             </div>
+            <!--end of about text section-->
          </div>
       </div>
       <!--end of about section-->
